--- a/src/app/medico/componentes/recetas/recetas.component.css
+++ b/src/app/medico/componentes/recetas/recetas.component.css
@@ -148,3 +148,26 @@
     border-radius: 8px;
     font-size: 16px;
 }
+
+.medicamentos-lista {
+    margin-top: 20px;
+    background-color: #f1f5f9;
+    padding: 15px;
+    border-radius: 10px;
+    border-left: 4px solid #3b82f6;
+}
+
+.medicamentos-lista h4 {
+    margin-bottom: 10px;
+    color: #3b82f6;
+}
+
+.medicamentos-lista ul {
+    list-style: disc;
+    padding-left: 20px;
+}
+
+.medicamentos-lista li {
+    margin-bottom: 10px;
+    color: #374151;
+}
