implementacion lista de citas y medicos e interceptors

--- a/src/app/paciente/compoentes/seleccionar-medico/seleccionar-medico.component.html
+++ b/src/app/paciente/compoentes/seleccionar-medico/seleccionar-medico.component.html
@@ -4,7 +4,7 @@
         <mat-label>Seleccione un médico</mat-label>
         <mat-select formControlName="medico" (selectionChange)="onChange($event.value)">
         <mat-option *ngFor="let m of medicos" [value]="m.id">
-            {{ m.nombre }} - {{ m.especialidad }}
+            {{ m.nombre }} {{m.apellido}} - {{ m.especialidad }}
         </mat-option>
         </mat-select>
     </mat-form-field>
