--- a/src/app/paciente/compoentes/home/home.component.html
+++ b/src/app/paciente/compoentes/home/home.component.html
@@ -52,7 +52,7 @@
         <td mat-cell *matCellDef="let cita">
           <button
             mat-icon-button
-            [routerLink]="['/paciente/mis-citas', cita.id]"
+            [routerLink]="['/paciente/detalle-cita', cita.id]"
           >
             <mat-icon>visibility</mat-icon>
           </button>
