--- a/src/app/medico/componentes/home/home.component.html
+++ b/src/app/medico/componentes/home/home.component.html
@@ -126,7 +126,7 @@
         <h2 class="titulo-detalle">¿Deseas marcar esta cita como finalizada?</h2>
         <div class="botones" style="justify-content: center;">
             <button class="btn-editar" (click)="ejecutarCancelacion()">Confirmar</button>
-            <button class="btn-cancelar" (click)="cancelarCancelacion()">Cancelar</button>
+            <button class="btn-cancelar" (click)="ejecutarCancelacion()">Cancelar</button>
         </div>
     </div>
 </div>
