--- a/src/app/medico/componentes/home/home.component.html
+++ b/src/app/medico/componentes/home/home.component.html
@@ -54,7 +54,7 @@
             <!-- Duración -->
             <div>
                 <strong>Duración (min):</strong><br>
-                <ng-container *ngIf="!modoEdicion">1</ng-container>
+                <ng-container *ngIf="!modoEdicion">60</ng-container>
                 <ng-container *ngIf="modoEdicion">
                     <input type="number" [(ngModel)]="duracionEditada" />
                 </ng-container>
@@ -63,7 +63,8 @@
             <!-- Médico -->
             <div>
                 <strong>Médico:</strong><br>
-                <ng-container *ngIf="!modoEdicion">{{ citaSeleccionada.medico }}</ng-container>
+                <ng-container *ngIf="!modoEdicion">{{ citaSeleccionada.medico.nombre }}
+                    {{citaSeleccionada.medico.apellido}}</ng-container>
                 <ng-container *ngIf="modoEdicion">
                     <input [(ngModel)]="medicoEditado" />
                 </ng-container>
@@ -126,7 +127,7 @@
         <h2 class="titulo-detalle">¿Deseas marcar esta cita como finalizada?</h2>
         <div class="botones" style="justify-content: center;">
             <button class="btn-editar" (click)="ejecutarCancelacion()">Confirmar</button>
-            <button class="btn-cancelar" (click)="ejecutarCancelacion()">Cancelar</button>
+            <button class="btn-cancelar" (click)="cancelarCancelacion()">Cancelar</button>
         </div>
     </div>
 </div>
