la parte de medico culminado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <!-- Logo 
         <img src="http://10.147.18.177:9095/api/media/download/35" alt="Logo" width="40" class="me-2" />-->
         <a class="navbar-brand fw-bold" routerLink="/"
-          class="navbar-brand fw-bold text-primary text-decoration-none">Clinica Velázquez</a>
+          class="navbar-brand fw-bold text-primary text-decoration-none">Clinica </a>
       </div>
 
       <!-- Navegación -->
